# Sceelix

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
Extras/: .gitignore
Extras/Unity Plugin/: ReadMe.txt
Setup/Linux/: Sceelix.in
Source/: Common.targets  DigitalRune.targets  Other.targets  Sceelix.sln  Tools.targets  VisualStudio.targets
Source/Sceelix/: Sceelix.csproj
Source/Sceelix.Actors/: Sceelix.Actors.csproj
Source/Sceelix.Actors.Tests/: Sceelix.Actors.Tests.csproj
Source/Sceelix.Actors/Properties/: AssemblyInfo.cs
Source/Sceelix.Core/: Sceelix.Core.csproj
Source/Sceelix.Core.Tests/: Sceelix.Core.Tests.csproj
Source/Sceelix.Core/Extensions/: MethodExtension.cs
Source/Sceelix.Core/Procedures/: CollectionProcedure.cs
Source/Sceelix.Core/Properties/: AssemblyInfo.cs
Source/Sceelix.Designer/: Sceelix.Designer.csproj  app.config  packages.config
Source/Sceelix.Designer.Actors/: Sceelix.Designer.Actors.csproj
Source/Sceelix.Designer.Actors/Properties/: AssemblyInfo.cs
Source/Sceelix.Designer.DataExplorer/: Sceelix.Designer.DataExplorer.csproj
Source/Sceelix.Designer.DataExplorer/Properties/: AssemblyInfo.cs
Source/Sceelix.Designer.Graphs/: Sceelix.Designer.Graphs.csproj
Source/Sceelix.Designer.Graphs/Properties/: AssemblyInfo.cs
Source/Sceelix.Designer.Meshes/: Sceelix.Designer.Meshes.csproj
Source/Sceelix.Designer.Meshes/Properties/: AssemblyInfo.cs
Source/Sceelix.Designer.Paths/: Sceelix.Designer.Paths.csproj
Source/Sceelix.Designer.Paths/Properties/: AssemblyInfo.cs
Source/Sceelix.Designer.Points/: Sceelix.Designer.Points.csproj
Source/Sceelix.Designer.Points/Properties/: AssemblyInfo.cs
Source/Sceelix.Designer.PreBuildProject/: Program.cs  Sceelix.Designer.PreBuildProject.csproj
Source/Sceelix.Designer.PreBuildProject/Properties/: AssemblyInfo.cs
Source/Sceelix.Designer.ProjectExplorer/: Sceelix.Designer.ProjectExplorer.csproj
Source/Sceelix.Designer.ProjectExplorer/GUI/: ProjectExplorerWindow.cs
Source/Sceelix.Designer.ProjectExplorer/Management/: ProjectHistorySettings.cs
Source/Sceelix.Designer.ProjectExplorer/Properties/: AssemblyInfo.cs
Source/Sceelix.Designer.Props/: Sceelix.Designer.Props.csproj
Source/Sceelix.Designer.Props/Properties/: AssemblyInfo.cs
Source/Sceelix.Designer.Renderer3D/: Sceelix.Designer.Renderer3D.csproj
Source/Sceelix.Designer.Renderer3D/Properties/: AssemblyInfo.cs
Source/Sceelix.Designer.Surfaces/: Sceelix.Designer.Surfaces.csproj
Source/Sceelix.Designer.Surfaces/Properties/: AssemblyInfo.cs
Source/Sceelix.Designer.Unity3D/: Sceelix.Designer.Unity3D.csproj
Source/Sceelix.Designer.Unity3D/GUI/: UnityExportConfigurationDocumentControl.cs  (+1 more)
Source/Sceelix.Documentation/: Sceelix.Documentation.csproj
Source/Sceelix.Gis/: Sceelix.Gis.csproj  app.config
Source/Sceelix.Gis.Tests/: Sceelix.Gis.Tests.csproj
Source/Sceelix.Mathematics/: Sceelix.Mathematics.csproj
Source/Sceelix.Mathematics.Tests/: Sceelix.Mathematics.Tests.csproj
Source/Sceelix.Meshes/: Sceelix.Meshes.csproj
Source/Sceelix.Meshes.Tests/: Sceelix.Meshes.Tests.csproj
Source/Sceelix.Paths/: Sceelix.Paths.csproj
Source/Sceelix.Paths.Tests/: Sceelix.Paths.Tests.csproj
Source/Sceelix.Points/: Sceelix.Points.csproj
Source/Sceelix.Points.Tests/: Sceelix.Points.Tests.csproj
Source/Sceelix.PostBuildProject/: Sceelix.PostBuildProject.csproj
Source/Sceelix.Props/: Sceelix.Props.csproj
Source/Sceelix.Surfaces/: Sceelix.Surfaces.csproj
Source/Sceelix.Surfaces.Tests/: Sceelix.Surfaces.Tests.csproj
Source/Sceelix.Tests/: Sceelix.Tests.csproj
Source/Sceelix.Unity/: Sceelix.Unity.csproj
(+39 files in other folders)
